@@ -30,20 +30,22 @@
 #' @param orderedChar If TRUE (not the default), then the character will be reconstructed with a cost (step)
 #' matrix of a linear, ordered character. This is not applicable if \code{type = "ACCTRAN"}, as cost matrices cannot
 #' be used with ACCTRAN in \code{ancestral.pars}, and an error will be returned if \code{orderedChar = TRUE} but
-#' a cost matrix is given, as the only reason to use orderedChar is to produce a cost matrix automatically.
+#' a cost matrix is given, as the only reason to use \code{orderedChar} is to produce a cost matrix automatically.
 
 #' @param type The parsimony algorithm applied by \code{ancestral.pars}, which can apply one of two:
 #' "MPR" (the default) is a relatively fast algorithm developed by Hanazawa et al. (1995) and Narushima
 #' and Hanazawa (1997), which relies on reconstructing the states at each internal node by re-rooting at
 #' that node.  "ACCTRAN", the 'accelerated transitions' algorithm (Swofford and Maddison, 1987), favors
 #' character reversal over independent gains when there is ambiguity. The "ACCTRAN" option in
-#' ancestral.pars avoids repeated rerooting of the tree to search for a smaller set of maximum-parsimony
+#' \code{ancestral.pars} avoids repeated rerooting of the tree to search for a smaller set of maximum-parsimony
 #' solutions that satisfy the ACCTRAN algorithm, but does so by assigning edge weights.
-#' As of phangorn v1.99-12, both of these algorithms apply
-#' the Sankoff parsimony algorithm, which allows multifurcations (polytomies).
+#' As of phangorn v1.99-12, "MPR" is calculated using
+#' the Sankoff parsimony algorithm, which allows multifurcations (polytomies). This is \emph{not} true for
+#' "ACCTRAN", which uses the Fitch algorithm, which does not allow for multifurcations. An error
+#' is returned if a tree with multifurcations is passed and \code{type = "ACCTRAN"}.
  
 #' @param cost A matrix of the cost (i.e. number of steps) necessary to change between states of the input
-#' character trait. If NULL (the
+#' character trait. If \code{NULL} (the
 #' default), the character is assumed to be unordered with equal cost to change from any state to another.
 #' Cost matrices only impact the "MPR" algorithm; if a cost matrix is given but \code{type = "ACCTRAN"}, an error
 #' is issued.
@@ -177,18 +179,10 @@
 #' 
 #' #unordered, MPR
 #' ancMPR<-ancPropStateMat(retioTree, trait=retioChar[,2], type="MPR")
-#' #unordered, ACCTRAN
-#' ancACCTRAN<-ancPropStateMat(retioTree, trait=retioChar[,2], type="ACCTRAN")
-#' 
-#' #let's compare MPR versus ACCTRAN results
-#' layout(1:2)
 #' quickAncPlotter(retioTree,ancMPR,cex=0.5)
 #' text(x=4,y=5,"type='MPR'",cex=1.5)
-#' quickAncPlotter(retioTree,ancACCTRAN,cex=0.5)
-#' text(x=5,y=5,"type='ACCTRAN'",cex=1.5)
 #' 
 #' minCharChange(retioTree,trait=retioChar[,2],type="MPR")
-#' minCharChange(retioTree,trait=retioChar[,2],type="ACCTRAN")
 #' 
 #' # with simulated data
 #' 
@@ -457,6 +451,9 @@ ancPropStateMat<-function(trait, tree, orderedChar=FALSE, type="MPR", cost=NULL,
 	#return error if cost is not null and type=ACCTRAN
 	if(type=="ACCTRAN" & !is.null(cost)){
 		stop("cost matrix is inapplicable if ACCTRAN algorithm is used")}
+	# return error if tree is not fully resolved and type=ACCTRAN
+	if(type=="ACCTRAN" & !is.binary(tree)){
+		stop("tree must be fully resolved if ACCTRAN algorithm is used")}
 	#return error if cost is not null and orderedChar=TRUE
 	if(orderedChar & !is.null(cost)){
 		stop("Cannot treat character as ordered; cost matrix inapplicable under ACCTRAN")}
