@@ -6,6 +6,7 @@ Version - 2.9 (Designated as 3.0.0 at CRAN release - 07-04-17)
 -Added function setRootAge which will add a $root.time element to a tree, given a set of ages for tip taxa, using the age for the youngest matching taxon name
 -Added function setRootAges for setting root ages for a set of many trees as a multiPhylo object
 -Tried changing changelog.txt to .md, then changed it back
+-Turns out that ACCTRAN in phangorn was never converted from Fitch algorithm to Sankoff, and thus it was inappropriate for ACCTRAN to be applied to trees with multifurcations. This now results in an error if attempted by a user.
 -
 
 Version - 2.8 - 04-06-17 (Not Released to CRAN)
